# shawn-bio-search

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  KNOWN_GAPS.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EVALUATION_HANDOFF.md  OUTPUT_SCHEMA.md
outputs/: smoke_claim_report_p1_tuned.md
scripts/: _load_openclaw_shared_env.py  _load_openclaw_shared_env.sh  bench_verify_citation.py  benchmark_search.py  build_claim_evidence.py  dataset_search.py  deploy_to_openclaw_skill.sh  download_bundle.py  gather_papers.py  run_paper_writing_mode.sh  run_paper_writing_mode_v2.sh  run_review_pipeline.sh  run_shawn_bio_bridge.sh  search_bundle.py
shawn_bio_search/: __init__.py  _cache.py  cli.py  env.py  formatter.py  scoring.py  search.py  text_utils.py
shawn_bio_search/download/: __init__.py  dataset_resolver.py  fetcher.py  manifest.py  resolver.py  runner.py
shawn_bio_search/orchestrator/: __init__.py  degradation.py  trace.py
shawn_bio_search/sources/: __init__.py  _http.py  accession_resolver.py  arxiv.py  biorxiv.py  clinicaltrials.py  core.py  crossref.py  doaj.py  europe_pmc.py  f1000research.py  google_scholar.py  huggingface.py  kaggle.py  medrxiv.py  openaire.py  openalex.py  pubmed.py  scival.py  scopus.py  semanticscholar.py  unpaywall.py
tests/: test_accession_resolver.py  test_cache.py  test_citation_confidence.py  test_download_fetcher_offline.py  test_download_manifest.py  test_download_resolver.py  test_download_smoke.py  test_huggingface.py  test_kaggle.py  test_orchestrator_trace.py  test_smoke.py  test_text_utils.py
tests/fixtures/: bundle_min.json  openalex_min.json
