[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shawn-bio-search"
version = "0.1.0"
description = "Multi-source biomedical literature search with claim-level evidence scoring"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SHawn-bio-search contributors"}
]
keywords = ["bioinformatics", "literature-search", "pubmed", "scopus", "openalex", "organoid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
shawn-bio-search = "shawn_bio_search.cli:main"
sbs = "shawn_bio_search.cli:main"
shawn-bio-download = "shawn_bio_search.download.runner:main_cli"

[project.urls]
Homepage = "https://github.com/L-SHawn91/SHawn-bio-search"
Documentation = "https://github.com/L-SHawn91/SHawn-bio-search#readme"
Repository = "https://github.com/L-SHawn91/SHawn-bio-search"
Issues = "https://github.com/L-SHawn91/SHawn-bio-search/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shawn_bio_search*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
